add resize basic functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <div id="amin">
 
-
-  hello world form amin !!
+    <p contenteditable="true"> hello world form amin !! </p>
 </div>
+
+<textarea id="abc" rows="5" cols="55">
+    At w3schools.com you will learn how to make a website. We offer free tutorials in all web development technologies. 
+    </textarea>
+    
+ 
