--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,20 @@
-#amin 
-{
+.sticker {
+    background: #bada55;
+    color: black;
 
-    background-color: red;
-    border:1px solid black;
+    box-shadow: -3px 3px 3px  #b3bbc6;
+    resize: none;
+    overflow: none;
+    width: 50px;
+    height: 50px;
+    right: 30px;
+
+    position: fixed;
+    right: 50px;
+    top: 200px;
+    border-radius: 0px;
+
+
+    outline: none;
+
 }
