--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,8 @@
 
-
-<div id="pag">
-    <div class ="sticker"  style="background-color:#FFFF8A;top:180px;">  </div>
-    <div class ="sticker"  style="background-color:#6596F7;top:240px;">  </div>
-    <div class ="sticker"  style="background-color: #92FF8A;top:300px;">  </div>
-    <div class ="sticker"  style="background-color: #DA55C6;top:360px;">  </div>
-    <div class ="sticker"  style="background-color: #ff9634;top:420px;">  </div>
-  </div>
-
-
-   <app-sticky-component *ngFor="let sticky of stickies" 
-    [idd]="sticky.id"></app-sticky-component>
-      
-    
   
    
-
+    <router-outlet></router-outlet>
+    
 
 
 
