login with google not facebook yet

--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -9,15 +9,18 @@
 </div>
 
 
- <app-sticky-component *ngFor="let sticky of posts | async" 
-  [idd]="sticky.title"></app-sticky-component>
+ <!--<app-sticky-component *ngFor="let sticky of posts | async" 
+  [idd]="sticky.title"></app-sticky-component>-->
     
   <div class="form-container" id="toolbar">
     <header [@fallIn]="state">
-      <button (click)="logout()" class="basic-btn">Logout</button>
+      <button (click)="auth.signOut()" class="basic-btn">Logout</button>
     </header>
     <div id="page" [@moveInLeft]="state">
-      <h2>Hey {{ name.auth.displayName }}!</h2>
+        <div *ngIf="auth.user | async as user">
+            <img  [src]="user.photoURL">
+            <p>UID: {{ user.uid }}</p>
+      <h2>Hey {{ user.displayName }}!</h2>
 
       <img src="assets/images/filler.png" />
     </div>
