--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -7,7 +7,7 @@
   <div class ="sticker"  style="background-color: #DA55C6;top:360px;">  </div>
   <div class ="sticker"  style="background-color: #ff9634;top:420px;">  </div>
 </div>
-
+ssssssssssssssssssss
 
  <!--<app-sticky-component *ngFor="let sticky of posts | async" 
   [idd]="sticky.title"></app-sticky-component>-->
