--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
-body {
+/*body {
     background:#E2E4E6;
-    padding-top:4em;
+    padding-left:10em;
+}*/
+
+
+body {
+    height: 1500px;
+    max-width: 800px;
+  /* overflow-x: hidden;*/
+    padding: 0;
+    margin: 0;
+    z-index: 0;
+    padding-left:10em;
+    background:#E2E4E6;
 }
 
+
+/*
 .form-container {
     background:white;
     padding:3.5em;
@@ -12,13 +26,13 @@ body {
     left:50%;
     margin-left:-250px;
 }
-
+*/
 button {
-    padding:1.2em;
-    width:100%;
+  /*  padding:1.2em;*/
+  /*  width:100%;*/
     cursor:pointer;
     margin-bottom:15px;
-    font-size:1.3em;
+    font-size:1.1em;
 }
 
 .basic-btn {
