--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,5 +1,5 @@
 
-
+<div class="blog-post" innerHtml="{{stickyCompo}}"></div>
 <div id="pag">
   <div class ="sticker"  style="background-color:#FFFF8A;top:180px;">  </div>
   <div class ="sticker"  style="background-color:#6596F7;top:240px;">  </div>
@@ -7,22 +7,21 @@
   <div class ="sticker"  style="background-color: #DA55C6;top:360px;">  </div>
   <div class ="sticker"  style="background-color: #ff9634;top:420px;">  </div>
 </div>
-ssssssssssssssssssss
 
+<!--  <app-sticky-component></app-sticky-component>  -->
  <!--<app-sticky-component *ngFor="let sticky of posts | async" 
   [idd]="sticky.title"></app-sticky-component>-->
     
-  <div class="form-container" id="toolbar">
-    <header [@fallIn]="state">
-      <button (click)="auth.signOut()" class="basic-btn">Logout</button>
-    </header>
-    <div id="page" [@moveInLeft]="state">
+ 
+   
+
+    <button (click)="auth.signOut()" class="basic-btn">Logout</button>
         <div *ngIf="auth.user | async as user">
             <img  [src]="user.photoURL">
             <p>UID: {{ user.uid }}</p>
       <h2>Hey {{ user.displayName }}!</h2>
 
-      <img src="assets/images/filler.png" />
+     
     </div>
     
-</div>
+
