dragable with add component dynamiclly

--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,5 +1,5 @@
 
-<div class="blog-post" innerHtml="{{stickyCompo}}"></div>
+<div #parent></div> 
 <div id="pag">
   <div class ="sticker"  style="background-color:#FFFF8A;top:180px;">  </div>
   <div class ="sticker"  style="background-color:#6596F7;top:240px;">  </div>
