--- a/src/app/sticky-component/sticky-component.component.html
+++ b/src/app/sticky-component/sticky-component.component.html
@@ -1,6 +1,6 @@
 
 <!-- [style.z-index]="zIndex"  -->
-    <div class ="head"  [id]="idd" style="z-index: 1000"><div class ="spec" > 
+    <div class ="head" (mouseenter) ="addDraggable" [id]="idd" style="z-index: 1000"><div class ="spec" > 
       <img onclick="addSticky(this)" src="../assets/add.png" alt="Mountain View" style="width:10px;height:10px;
       position: relative;bottom:5px;right:5px"> 
       <img  (click)="deleteSticky()" src="../assets/close b.png"  
