--- a/src/app/sticky-component/sticky-component.component.html
+++ b/src/app/sticky-component/sticky-component.component.html
@@ -1,10 +1,10 @@
 
 <!-- [style.z-index]="zIndex"  -->
     <div class ="head" (mouseenter)="setDrag()" [id]="idd" style="z-index: 1000"><div class ="spec" > 
-      <img onclick="addSticky(this)" src="../assets/add.png" alt="Mountain View" style="width:10px;height:10px;
-      position: relative;bottom:5px;right:5px"> 
+      <img onclick="addSticky(this)" src="../assets/add.png" alt="Mountain View" style="width:12px;height:12px;
+      position: relative;bottom:2px;right:5px"> 
       <img  (click)="deleteSticky()" src="../assets/close b.png"  
-      alt="Mountain View" style=" position: relative;right:-151px; width:20px;height:20px;"></div> 
+      alt="Mountain View" style=" position: relative;right:-149px;bottom:2px; width:20px;height:20px;"></div> 
       <div class ="sticker2"   style="background-color:#6596F7" > 
       <p class="paragraphClass"  id="parag"  contenteditable="true">Amin</p>
       </div></div>
