--- a/src/app/sticky-component/sticky-component.component.html
+++ b/src/app/sticky-component/sticky-component.component.html
@@ -1,7 +1,7 @@
 
 <!-- [style.z-index]="zIndex"  -->
     <div class ="head" (mouseenter)="setDrag()" [id]="idd" style="z-index: 1000"><div class ="spec" > 
-      <img onclick="addSticky(this)" src="../assets/add.png" alt="Mountain View" style="width:12px;height:12px;
+      <img (click)="addSticky()" src="../assets/add.png" alt="Mountain View" style="width:12px;height:12px;
       position: relative;bottom:2px;right:5px"> 
       <img  (click)="deleteSticky()" src="../assets/close b.png"  
       alt="Mountain View" style=" position: relative;right:-149px;bottom:2px; width:20px;height:20px;"></div> 
