--- a/src/app/sticky-component/sticky-component.component.html
+++ b/src/app/sticky-component/sticky-component.component.html
@@ -1,15 +1,18 @@
-
 <!-- [style.z-index]="zIndex"  -->
-    <div class ="head" (mouseenter)="setDrag()" [id]="idd" style="z-index: 1000"><div class ="spec" > 
+
+
+
+<div [style.left]="PLeft" [style.top]="PTop"  style="position:absolute" >
+  <div class ="head" (mouseenter)="setDrag()" [id]="idd" style="z-index: 1000"><div class ="spec" > 
       <img (click)="addSticky()" src="../assets/add.png" alt="Mountain View" style="width:12px;height:12px;
       position: relative;bottom:2px;right:5px"> 
       <img  (click)="deleteSticky()" src="../assets/close b.png"  
       alt="Mountain View" style=" position: relative;right:-149px;bottom:2px; width:20px;height:20px;"></div> 
-      <div class ="sticker2"   style="background-color:#6596F7" > 
+      <div class ="sticker2"   [style.backgroundColor]="amin"> 
       <p class="paragraphClass"  id="parag"  contenteditable="true">Amin</p>
       </div></div>
 
-
+    </div> 
   
-
+      <!-- style="background-color:#6596F7" -->
      
