--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,19 @@
 
-  
+
+
+
+
+
+<div id="pag">
+    <div id = "aimid" (click)="setColor($event)" class ="sticker"  style="background-color:#FFFF8A;top:180px;">  </div>
+    <div id = "a222" (click)="setColor($event)" class ="sticker"  style="background-color:#6596F7;top:240px;">  </div>
+    <div class ="sticker" (click)="setColor($event)" style="background-color: #92FF8A;top:300px;">  </div>
+    <div class ="sticker" (click)="setColor($event)" style="background-color: #DA55C6;top:360px;">  </div>
+    <div class ="sticker" (click)="setColor($event)" style="background-color: #ff9634;top:420px;">  </div>
+  </div>
+  <!--  <app-sticky-component></app-sticky-component>  -->
+   <!--<app-sticky-component *ngFor="let sticky of posts | async" 
+    [idd]="sticky.title"></app-sticky-component>-->
+      
    
-    <router-outlet></router-outlet>
     
-
-
-
