--- a/src/app/sticky-component/sticky-component.component.html
+++ b/src/app/sticky-component/sticky-component.component.html
@@ -3,13 +3,13 @@
 
 
 <div  [style.left]="PLeft" [style.top]="PTop"  style="position:absolute" >
-  <div class ="head" (mouseenter)="setDrag()" [id]="idd" style="z-index: 1000"><div class ="spec" > 
+  <div class ="head" (mouseenter)="setDrag()"  style="z-index: 1000"><div class ="spec" > 
       <img (click)="addSticky()" src="../assets/add.png" alt="Mountain View" style="width:12px;height:12px;
       position: relative;bottom:2px;right:5px"> 
       <img  (click)="deleteSticky()" src="../assets/close b.png"  
       alt="Mountain View" style=" position: relative;right:-149px;bottom:2px; width:20px;height:20px;"></div> 
-      <div class ="sticker2" id={{_id}} > 
-      <p class="paragraphClass"  id="parag"  contenteditable="true">Amin</p>
+      <div class ="sticker2" [id]="_id" > 
+      <p class="paragraphClass"  contenteditable="true">Amin</p>
       </div></div>
       {{_id}}
     </div> 
