--- a/src/app/sticky-component/sticky-component.component.html
+++ b/src/app/sticky-component/sticky-component.component.html
@@ -8,10 +8,10 @@
       position: relative;bottom:2px;right:5px"> 
       <img  (click)="deleteSticky()" src="../assets/close b.png"  
       alt="Mountain View" style=" position: relative;right:-149px;bottom:2px; width:20px;height:20px;"></div> 
-      <div class ="sticker2" [id]="_id" > 
+      <div class ="sticker2" [style.backgroundColor]="_StickyColorr" > 
       <p class="paragraphClass"  contenteditable="true">Amin</p>
       </div></div>
-      {{_id}}
+      {{_StickyColorr}}  {{_id}}
     </div> 
   
       <!-- style="background-color:#6596F7"    [style.backgroundColor]="amin" -->
